Style Landing Page and Create Slideshow.

--- a/style.css
+++ b/style.css
@@ -1,16 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
- /*Common styles*/
- * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    font-family: "Nunito", sans-serif;
-    font-weight: 400;
- }
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap");
+/*Common styles*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
+  font-family: "Nunito", sans-serif;
+  font-weight: 400;
+}
 
- html {
-    font-size: 62.5%;
- }
- /*End Common styles*/
+html {
+  font-size: 62.5%;
+}
+/*End Common styles*/
+
+/*Section 01*/
+section {
+  width: 100%;
+  height: 100vh;
+  background-color: #333; /*Color "mate*/
+  /*Centrar elemento*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+/*Variety Of Foods*/
+.section-heading {
+  font-size: 12rem;
+  font-weight: 900;
+  color: #fff;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: 0.5rem;
+  text-shadow: 0.3rem 0.3rem 0.3rem #000;
+}
+
+/*Íconos*/
+/*Center and hide the icons*/
+/*transform: translate(X axis, Y axis) scale(0)*/
+.section-01-icons i {
+  font-size: 35rem;
+  color: #a79a2d;
+  position: absolute;
+  transform: translate(-50%, -50%) scale(0);
+  text-shadow: 0.2rem 0.2rem 0.2rem #000; 
+}
+
+/*Manipulate the animation*/
+.section-01-icons i.change {
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 0.3s 0.3s;
+}
+/*End Section 01*/
