--- a/style.css
+++ b/style.css
@@ -13,10 +13,21 @@
 html {
   font-size: 62.5%;
 }
+
+/* "Variety Of Foods" */
+.section-heading {
+  font-size: 12rem;
+  font-weight: 900;
+  color: #fff;
+  text-align: center;
+  text-transform: capitalize;
+  letter-spacing: 0.5rem;
+  text-shadow: 0.3rem 0.3rem 0.3rem #000;
+}
 /*End Common styles*/
 
 /*Section 01*/
-section {
+.section-01 {
   width: 100%;
   height: 100vh;
   background-color: #333; /*Color "mate*/
@@ -27,26 +38,15 @@ section {
   justify-content: space-evenly;
 }
 
-/*Variety Of Foods*/
-.section-heading {
-  font-size: 12rem;
-  font-weight: 900;
-  color: #fff;
-  text-align: center;
-  text-transform: capitalize;
-  letter-spacing: 0.5rem;
-  text-shadow: 0.3rem 0.3rem 0.3rem #000;
-}
-
-/*Íconos*/
-/*Center and hide the icons*/
-/*transform: translate(X axis, Y axis) scale(0)*/
+/*Icons*/
+/*Center and hide the icons:
+transform: translate(X axis, Y axis) scale(0)*/
 .section-01-icons i {
   font-size: 35rem;
   color: #a79a2d;
   position: absolute;
   transform: translate(-50%, -50%) scale(0);
-  text-shadow: 0.2rem 0.2rem 0.2rem #000; 
+  text-shadow: 0.2rem 0.2rem 0.2rem #000;
 }
 
 /*Manipulate the animation*/
@@ -55,3 +55,94 @@ section {
   transition: transform 0.3s 0.3s;
 }
 /*End Section 01*/
+
+/*Section 02*/
+.section-02 {
+  width: 100%;
+  height: 100vh;
+  background-color: #222;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10rem 0;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 30rem;
+  background-color: #a79a2d;
+  padding: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 1rem 1rem 1rem #000;
+  position: relative;
+  transform: rotateY(20deg) skewX(-2deg);
+  transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.card:hover {
+  transform: rotateY(20deg) skewX(-2deg) translateY(-3rem);
+  box-shadow: 2rem 2rem 2rem #000;
+}
+
+.card::before {
+  content: "";
+  height: 100%;
+  width: 1rem;
+  background-color: #817824;
+  position: absolute;
+  top: 0;
+  left: -1rem;
+  transform: skewY(45deg);
+  transform-origin: right;
+  box-shadow: -0.1rem -0.1rem -0.1rem #000;
+}
+
+.card::after {
+  content: "";
+  height: 1rem;
+  width: 100%;
+  background-color: #8f8317;
+  position: absolute;
+  top: -1rem;
+  left: 0;
+  transform: skewX(45deg);
+  transform-origin: bottom;
+  box-shadow: -0.1rem -0.1rem -0.1rem #000;
+}
+
+.card-img {
+  width: 100%;
+}
+
+.card-name {
+  font-size: 3rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  color: #111;
+  margin: 2rem 0;
+  text-shadow: 0.15rem 0.15rem 0.15rem #000;
+}
+
+.card-btn {
+  width: 70%;
+  background-color: #111;
+  color: #888;
+  border-radius: 5rem;
+  font-size: 1.5rem;
+  font-weight: 800;
+  letter-spacing: 0.2rem;
+  text-transform: capitalize;
+  border: none;
+  padding: 0.5rem 0;
+  cursor: pointer;
+  box-shadow: -0.2rem -0.2rem -0.2rem #000;
+}
+/*End Section 02*/
