--- a/style.css
+++ b/style.css
@@ -263,3 +263,77 @@ transform: translate(X axis, Y axis) scale(0)*/
   transition: opacity 1s 1s;
 }
 /*End Section 03*/
+
+/*Section 04*/
+.section-04{
+  width: 100%;
+  height: 30vh;
+  background-color: #222;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding: 2rem 0;
+  position: relative;
+}
+
+.section-04-text{
+  text-transform: uppercase;
+}
+
+.section-04-heading{
+  font-size: 4rem;
+  font-weight: 900;
+  color: #a79a2d;
+}
+
+.section-04-paragraph{
+  font-size: 1.5rem;
+  color: #888;
+}
+
+.signup-form{
+  display: flex;
+  align-items: center;
+}
+
+.signup-form-input{
+  width: 35rem;
+  height: 5rem;
+  padding: 1rem;
+  border: 0.2rem solid #a79a2d;
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: #a79a2d;
+}
+
+.signup-form-input::placeholder{
+  color: #a79a2d;
+}
+
+.signup-form-btn{
+  position: relative;
+  /*put inside signup-form-input*/
+  left: -4.5rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: #333;
+  color: #a79a2d;
+  border: none;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.copyright{
+  position: absolute;
+  bottom: 2rem;
+  font-size: 1.7rem;
+  font-weight: 200;
+  color: #eee;
+  letter-spacing: 0.1rem;
+  border-top: 0.1rem solid #888;
+  padding-top: 1rem;
+  width: 100%;
+  text-align: center;
+}
+/*End Section 04*/
