--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ html {
   font-size: 62.5%;
 }
 
-/* "Variety Of Foods" */
 .section-heading {
   font-size: 12rem;
   font-weight: 900;
@@ -106,6 +105,7 @@ html {
   border-radius: 30rem 30rem 15rem 15rem;
   box-shadow: 0.1rem 0.1rem 0.1rem #000, -0.1rem -0.1rem 0.1rem #000;
   cursor: pointer;
+  z-index: 100;
   transition: top 0.4s 0.2s;
 }
 
@@ -437,3 +437,106 @@ transform: translate(X axis, Y axis) scale(0)*/
   text-align: center;
 }
 /*End Section 04*/
+
+/*Responsive*/
+/*At 1400px, happen this */
+@media(max-width: 1400px){
+  html{
+    font-size: 50%;
+  }
+
+  .section-02 {
+    height: auto;
+    padding: 10rem 0 12rem 0;
+  }
+
+  .cards-container{
+    margin-top: 10rem;
+  }
+
+  .gallery-link{
+    width: 40rem;
+    height: 25rem;
+    margin: 5rem;
+  }
+
+  .food-img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media(max-width: 1000px){
+  .section-heading{
+    font-size: 9rem;
+    margin: 0 5rem;
+  }
+  
+  .section-i-icons i{
+    font-size: 25rem;
+  }
+
+  .cards-container{
+    flex-wrap: wrap;
+  }
+  
+  .card{
+    margin: 5rem;
+  }
+
+  .section-04{
+    height: 30rem;
+
+  }
+}
+
+@media(max-width: 900px){
+  .navbar-link{
+    margin: 2rem;
+  }
+
+  .navbar-link i{
+    font-size: 4rem;
+  }
+
+  .navbar-link span{
+    font-size: 2rem;
+  }
+}
+
+@media(max-width: 700px){
+  .section-heading{
+    font-size: 7rem;
+    margin: 0 10rem;
+  }
+  
+  .section-01-icons i{
+    font-size: 25rem;
+  }
+
+  .menu{
+    left: 2rem;
+  }
+
+  .section-04{
+    height: 40rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .section-04-text{
+    margin-bottom: 8rem;
+  }
+}
+
+@media(max-width: 550px){
+  html{
+    font-size:40%;
+  }
+
+  .navbar-link{
+    margin: 0 0.7rem;
+  }
+}
+/*End Responsive*/
